# Sinan

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  README.md  SINAN_DESIGN.md  config.defaults.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/shell-core/: Cargo.toml
apps/desktop/shell-core/src/: lib.rs  ports.rs  runtime.rs  supervisor.rs  token.rs
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/test/: backtest.test.ts  datepicker.test.ts  export.test.ts  factorWeights.test.ts  guard.test.ts  market.test.ts  pnl.test.ts  portfolio.test.ts  progress.test.ts  rangepicker.test.ts  sidebar.test.ts  signals.test.ts  tauri.test.ts  theme.test.ts
docs/: HANDOFF.md  PACKAGING.md  V2_PLAN.md
docs/design_handoff_sinan/: CLAUDE_CODE_PROMPT.md  PROJECT_PROMPT.md  README.md  司南 Sinan (预览·离线单文件).html  司南 Sinan - 设计规范.html
docs/design_handoff_sinan/design_source/: 司南 Sinan.html
scripts/: build-sidecars.mjs  dev.mjs  gen-installer-images.py
services/api/: package.json  tsconfig.json
services/api/src/: app.module.ts  bootstrap.ts  config.ts  main.ts
services/api/test/: backtest.test.ts  credential.test.ts  e2e.test.ts  fakes.ts  indicators.test.ts  ipc-guard.test.ts  jobs.test.ts  logs.test.ts  market.test.ts  migration.test.ts  models.test.ts  schedule.test.ts  tdx.test.ts  trading.test.ts
services/engine/: pyproject.toml  sinan-engine.spec
services/engine/sinan/: __init__.py  __main__.py  app.py  config.py
services/engine/sinan/backtest/: __init__.py  engine.py  metrics.py  splits.py
services/engine/sinan/cache/: __init__.py  build.py
services/engine/sinan/data/: __init__.py  datalayer.py  kline.py  layout.py  meta.py  store.py
services/engine/sinan/factors/: __init__.py  context.py  cross_section.py  custom.py  fund.py  library.py  market.py  mining.py  quality.py  score.py  tree.py
services/engine/sinan/indicators/: __init__.py  builtin.py  operators.py  safe_eval.py  validate.py
services/engine/sinan/paper/: __init__.py  account.py  costs.py  eod.py  risk.py  runner.py
services/engine/sinan/providers/: __init__.py  akshare_provider.py  base.py  circuit.py  credentials.py  factory.py  ratelimit.py  realtime_provider.py  registry.py  tushare_provider.py
services/engine/sinan/tdx/: __init__.py  ast_nodes.py  errors.py  evaluator.py  lexer.py  parser.py
services/engine/sinan/training/: __init__.py  device.py  features.py  labels.py  train.py
services/engine/tests/: helpers.py  test_akshare.py  test_app.py  test_backtest.py  test_cache_build.py  test_circuit.py  test_config_frozen.py  test_datalayer.py  test_device.py  test_factor_quality.py  test_factors.py  test_fund_lookthrough.py  test_fund_portfolio.py  test_indicators.py  test_kline.py  test_lightgbm.py  test_market.py  test_meta.py  test_metrics.py  test_migration.py  test_mining.py  test_model_signals.py  test_paper.py  test_ratelimit.py  test_realtime.py  test_registry.py  test_run_eod_lookback.py  test_runner.py  test_splits.py  test_sql_contract.py  test_store.py  test_tdx.py  test_training_data.py  test_training_train.py  test_tushare.py
(+113 files in other folders)
