[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sinan-engine"
version = "0.0.0"
description = "司南 engine(FastAPI):Provider 接入 / 因子 / 回测 / 训练 / 模拟盘 / 列式缓存"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "duckdb>=0.10",
  "polars>=1.0",
  "pyarrow>=14.0",
  "pydantic>=2.5",
  # sinan-contracts 在同一 venv 内 editable 安装,不从 PyPI 拉取。
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
# 用户自带数据源(BYO)— 可选,运行期由用户环境提供;Provider 以 httpx 直连官方 HTTP API,
# 不强依赖以下 SDK,故列为 extras 仅供需要时安装。
byo = ["tushare", "akshare"]

[tool.hatch.build.targets.wheel]
packages = ["sinan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
