[package]
name = "sinan-desktop"
version = "0.0.0"
edition = "2021"
description = "司南桌面外壳(Tauri 2):双 sidecar 监护 / 端口探测 / 会话 token / 启动遮罩 / 托盘 / 单实例。"

[lib]
name = "sinan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sinan-shell-core = { path = "../shell-core" }
